--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,7 +12,8 @@
 				"/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/",
 				"${file}",
 				"-o",
-				"${fileDirname}/${fileBasenameNoExtension}"
+				//"${fileDirname}/${fileBasenameNoExtension}"
+				"${fileDirname}/a.out"
 			],
 			"options": {
 				"cwd": "${workspaceFolder}"
