--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,12 +7,11 @@
 			"command": "/usr/local/bin/g++-9",
 			"args": [
 				"-std=gnu++17",
-				//"-g",
+				"-g", // debug情報付加
 				"-I",
 				"/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/",
 				"${file}",
 				"-o",
-				//"${fileDirname}/${fileBasenameNoExtension}"
 				"${fileDirname}/a.out"
 			],
 			"options": {
