--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,13 +3,14 @@
 	"tasks": [
 		{
 			"type": "shell",
-			"label": "C/C++: gcc-9 build active file",
-			"command": "/usr/local/bin/g++-9",
+			"label": "C/C++: gcc build active file",
+			//"command": "/usr/local/bin/g++-9",
+			"command": "/usr/bin/g++",
 			"args": [
-				"-std=gnu++17",
+				//"-std=gnu++17",
 				"-g", // debug情報付加
-				"-I",
-				"/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/",
+				//"-I",
+				//"/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/",
 				"${file}",
 				"-o",
 				"${fileDirname}/a.out"
