--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,7 @@
 				"-g", // debug情報付加
 				//"-I",
 				//"/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/",
+				"--std=c++11",
 				"${file}",
 				"-o",
 				"${fileDirname}/a.out"
